# DynamicPageLayout

./: .gitignore  CMakeLists.txt  DynamicPageLayout.qmlproject  README.md
ClusterModules/: Constants.qml
qml/: DynamicPageLayout.qml  KeyHandling.qml  PageView.qml  PageView_Impl2.qml  PageView_Impl2_Backup.qml  PageView_grid.qml  Widget1.qml  Widget2.qml  Widget3.qml  Widget4.qml  Widget5.qml  Widget6.qml  Widget7.qml  Widget8.qml  Widget9.qml
qml/+t2g/: KeyHandling.qml
src/: clusterstate.cpp  clusterstate.h  keymanager.cpp  keymanager.h  main.cpp  widgetmanager.cpp  widgetmanager.h  widgetmanager2.cpp  widgetmanager2.h
src/traveo_specific/: board_config.cpp  board_config.h
